# project-makefile

./: .gitignore  CHANGES.rst  Dockerfile  LICENSE.rst  LICENSE.txt  Makefile  Makefile.custom  README.md  README.rst  RELEASING.md  base.mk  django.yml  home_page.html  index.html  install.py  install.sh  logo.py  makefile.yml  manage.py  package.json  postgres.yml  project-makefile.yml  project.mk  pyproject.toml  requirements.txt  setup.py  slides-project-makefile.html  webpack.config.js
.github/workflows/: daily-makefile-run.yml  django-init-wagtail.yml  django-init.yml  django.yml  makefile.yml  mongodb.yml  node.js.yml  postgres.yml  project-makefile.yml
backend/: urls.py
backend/settings/: base.py  dev.py
backend/templates/: base.html  favicon.html  footer.html  header.html  offcanvas.html
basicpage/: apps.py  models.py
contactpage/: apps.py  models.py  tests.py
contactpage/migrations/: 0001_initial.py
defaultpage/: apps.py  models.py
defaultpage/migrations/: 0001_initial.py
doc/: Makefile  conf.py  index.rst  make.bat
frontend/: .babelrc  .eslintrc  package-lock.json  package.json
frontend/webpack/: webpack.common.js
home/: models.py  tests.py
home/migrations/: 0002_create_homepage.py  (+1 more)
privacy/: models.py
privacy/migrations/: 0001_initial.py
project/: settings.py  urls.py
project_makefile/: write_makefile.py
search/: urls.py
sitepage/: apps.py  models.py
siteuser/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/: index.js
standardpage/: apps.py  models.py
write_makefile/: write_makefile.py
(+146 files in other folders)
