[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-makefile"
version = "0.1.0"
description = "A package to write a Makefile to the file system"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]

[project.scripts]
project-makefile = "write_makefile.write_makefile:write_makefile"

[tool.setuptools]
packages = ["project_makefile"]

[tool.setuptools.package-data]
project_makefile = ["../Makefile"]
